# Natoils

./: README.md  pyproject.toml
apps/order_app/: models.py
apps/product_app/: models.py
apps/user_app/: models.py
apps/user_app/migrations/: 0001_initial.py
core/: settings.py
